tests/ui/specialization/default-associated-type-bound-2.stderr
error[E0277]: can't compare `&'static B` with `B`
  --> $DIR/default-associated-type-bound-2.rs:15:22
   |
LL |     default type U = &'static B;
   |                      ^^^^^^^^^^ no implementation for `&'static B == B`
   |
   = help: the trait `PartialEq<B>` is not implemented for `&'static B`
note: required by a bound in `X::U`
  --> $DIR/default-associated-type-bound-2.rs:5:13
   |
LL |     type U: PartialEq<T>;
   |             ^^^^^^^^^^^^ required by this bound in `X::U`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<B: 'static, T> X<B> for T where &'static B: PartialEq<B> {
   |                                ++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
